--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,11 @@ stages:
 jobs:
   include:
     ## Define the test stage that runs the linters (and testing matrix, if applicable)
-
     # Run all of the linters in a single job
     - language: node_js
       node_js: lts/*
       env: Lint
-      name: 'Lint: salt-lint, yamllint, rubocop & commitlint'
+      name: 'Lint: salt-lint, yamllint'
       before_install: skip
       script:
         # Install and run `salt-lint`
@@ -39,13 +38,6 @@ jobs:
         # Need at least `v1.17.0` for the `yaml-files` setting
         - pip install --user yamllint>=1.17.0
         - yamllint -s .
-        # Install and run `rubocop`
-        - gem install rubocop
-        - rubocop -d
-        # Install and run `commitlint`
-        - npm install @commitlint/config-conventional -D
-        - npm install @commitlint/travis-cli -D
-        - commitlint-travis
 
     ## Define the rest of the matrix based on Kitchen testing
     # Make sure the instances listed below match up with
@@ -61,7 +53,7 @@ jobs:
     #       to allow for comprehensive local testing
     #       Ref: https://github.com/saltstack-formulas/template-formula/issues/118
     #       Ref: https://github.com/saltstack-formulas/template-formula/issues/121
-    - env: INSTANCE=default-debian-10-master-py3
+    # - env: INSTANCE=default-debian-10-master-py3
     # - env: INSTANCE=default-ubuntu-1804-develop-py3
     # - env: INSTANCE=default-centos-7-develop-py3
     # - env: INSTANCE=default-fedora-30-develop-py3
@@ -73,43 +65,19 @@ jobs:
     # - env: INSTANCE=default-centos-7-2019-2-py3
     # - env: INSTANCE=default-fedora-30-2019-2-py3
     # - env: INSTANCE=default-opensuse-leap-15-2019-2-py3
-    - env: INSTANCE=default-amazonlinux-2-2019-2-py2
-    - env: INSTANCE=default-arch-base-latest-2019-2-py2
+    # - env: INSTANCE=default-amazonlinux-2-2019-2-py2
+    # - env: INSTANCE=default-arch-base-latest-2019-2-py2
     # - env: INSTANCE=default-debian-9-2018-3-py2
     # - env: INSTANCE=default-ubuntu-1604-2018-3-py2
     # - env: INSTANCE=default-centos-7-2018-3-py2
-    - env: INSTANCE=default-fedora-29-2018-3-py2
-    - env: INSTANCE=default-opensuse-leap-15-2018-3-py2
+    # - env: INSTANCE=default-fedora-29-2018-3-py2
+    # - env: INSTANCE=default-opensuse-leap-15-2018-3-py2
     # - env: INSTANCE=default-amazonlinux-2-2018-3-py2
     # - env: INSTANCE=default-arch-base-latest-2018-3-py2
     # - env: INSTANCE=default-debian-8-2017-7-py2
     # - env: INSTANCE=default-ubuntu-1604-2017-7-py2
-    - env: INSTANCE=centos6-centos-6-2017-7-py2
+    # - env: INSTANCE=centos6-centos-6-2017-7-py2
     # - env: INSTANCE=default-fedora-29-2017-7-py2
     # - env: INSTANCE=default-opensuse-leap-15-2017-7-py2
     # - env: INSTANCE=default-amazonlinux-2-2017-7-py2
     # - env: INSTANCE=default-arch-base-latest-2017-7-py2
-
-    ## Define the release stage that runs `semantic-release`
-    - stage: release
-      language: node_js
-      node_js: lts/*
-      env: Release
-      name: 'Run semantic-release inc. file updates to AUTHORS, CHANGELOG & FORMULA'
-      before_install: skip
-      script:
-        # Update `AUTHORS.md`
-        - export MAINTAINER_TOKEN=${GH_TOKEN}
-        - go get github.com/myii/maintainer
-        - maintainer contributor
-
-        # Install all dependencies required for `semantic-release`
-        - npm install @semantic-release/changelog@3 -D
-        - npm install @semantic-release/exec@3 -D
-        - npm install @semantic-release/git@7 -D
-      deploy:
-        provider: script
-        skip_cleanup: true
-        script:
-          # Run `semantic-release`
-          - npx semantic-release@15
