--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,7 +4,7 @@ driver:
 
 platforms:
   - name: ubuntu-16.04
-  - name: ubuntu-18.04
+  - name: default-ubuntu-1804-2019-2-py3
 
 provisioner:
   name: salt_solo
