--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,11 +4,11 @@ driver:
 
 platforms:
   - name: ubuntu-16.04
-  - name: default-ubuntu-1804-2019-2-py3
+  - name: ubuntu-18.04
 
 provisioner:
   name: salt_solo
-  require_chef: false
+  require_chef: true
   pillars-from-files:
     envoy.sls: test/pillar/envoy.sls
   formula: envoy
