--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ cache: bundler
 
 ## Script to run for the test stage
 script:
-  - bin/kitchen list
+  - bin/kitchen list all
   - bundle install
-  - bundle exec kitchen test
+  - bundle exec kitchen test all
   - bin/kitchen verify "${INSTANCE}"
 
 ## Stages and jobs matrix
