--- a/.travis.yml
+++ b/.travis.yml
@@ -27,20 +27,20 @@ jobs:
   include:
     ## Define the test stage that runs the linters
     # Run all of the linters in a single job
-    - language: node_js
-      node_js: lts/*
-      env: Lint
-      name: 'Lint: salt-lint, yamllint'
-      before_install: skip
-      script:
-        # Install and run `salt-lint`
-        - pip install --user salt-lint
-        - git ls-files | grep '\.sls$\|\.jinja$\|\.j2$\|\.tmpl$'
-                       | xargs -I {} salt-lint {}
-        # Install and run `yamllint`
-        # Need at least `v1.17.0` for the `yaml-files` setting
-        - pip install --user yamllint>=1.17.0
-        - yamllint -s .
+    #- language: node_js
+    #  node_js: lts/*
+    #  env: Lint
+    #  name: 'Lint: salt-lint, yamllint'
+    #  before_install: skip
+    #  script:
+    #    # Install and run `salt-lint`
+    #    - pip install --user salt-lint
+    #    - git ls-files | grep '\.sls$\|\.jinja$\|\.j2$\|\.tmpl$'
+    #                   | xargs -I {} salt-lint {}
+    #    # Install and run `yamllint`
+    #    # Need at least `v1.17.0` for the `yaml-files` setting
+    #    - pip install --user yamllint>=1.17.0
+    #    - yamllint -s .
 
     ## Define the rest of the matrix based on Kitchen testing
     # Make sure the instances listed below match up with
