Reconfigure/activate vbox

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ cache: bundler
 
 ## Script to run for the test stage
 script:
-  - sudo apt-get update && sudo apt-get install -y virtualbox vagrant
+  - sudo apt-get update && sudo apt-get install -y virtualbox vagrant && dpkg-reconfigure virtualbox-*
   - bin/kitchen list all
   - bundle install
   - bundle exec kitchen test all
