--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,10 +1,19 @@
 ---
 driver:
-  name: vagrant
+  name: docker
+  use_sudo: false
+  privileged: true
+
+transport:
+  name: sftp
 
 platforms:
-  #- name: ubuntu-16.04
+  - name: ubuntu-16.04
+    driver_config:
+      run_command: /usr/lib/systemd/systemd
   - name: ubuntu-18.04
+    driver_config:
+      run_command: /usr/lib/systemd/systemd
 
 provisioner:
   name: salt_solo
