--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,21 +3,22 @@ driver:
   name: docker
   use_sudo: false
   privileged: true
+  run_command: /lib/systemd/systemd
 
 transport:
   name: sftp
 
 platforms:
-  - name: ubuntu-16.04
-    driver_config:
-      run_command: /usr/lib/systemd/systemd
-  - name: ubuntu-18.04
-    driver_config:
-      run_command: /usr/lib/systemd/systemd
+  - name: ubuntu-1804-2019-2-py3
+    driver:
+      image: netmanagers/salt-2019.2-py3:ubuntu-18.04
 
 provisioner:
   name: salt_solo
   require_chef: true
+  salt_copy_filter:
+    - .kitchen
+    - .git
   pillars-from-files:
     envoy.sls: test/pillar/envoy.sls
   formula: envoy
